--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -11,6 +11,6 @@ jobs:
     name: Update this repo's README
     runs-on: ubuntu-latest
     steps:
-      - uses: vinayky1507/waka-readme@master
+      - uses: vinayky1507/waka-readme@main
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
